# drivers-orogen-controldev

./: CMakeLists.txt  ControlDevTypes.hpp  Doxyfile.in  README.md  controldev.orogen  manifest.xml
scripts/: joypad2motion2d.rb  joystick.rb  mc20.rb  steeringWheel.rb
tasks/: CMakeLists.txt  GenericRawToMotion2D.cpp  GenericRawToMotion2D.hpp  GenericRawToTwist.cpp  GenericRawToTwist.hpp  GenericTask.cpp  GenericTask.hpp  GraupnerMC20Task.cpp  GraupnerMC20Task.hpp  JoyPadTask.cpp  JoyPadTask.hpp  JoystickTask.cpp  JoystickTask.hpp  Local.cpp  Local.hpp  Mouse3DTask.cpp  Mouse3DTask.hpp  RawCommandAggregator.cpp  RawCommandAggregator.hpp  RawJoystickToMotion2D.cpp  RawJoystickToMotion2D.hpp  RawWheelToMotion2D.cpp  RawWheelToMotion2D.hpp  Remote.cpp  Remote.hpp  SliderboxTask.cpp  SliderboxTask.hpp  SteeringWheel.cpp  SteeringWheel.hpp  SteeringWheelTask.cpp  SteeringWheelTask.hpp  WebSocketTask.cpp  WebSocketTask.hpp
test/: raw_command_aggregator_test.rb
