include(controldevTaskLib)
ADD_LIBRARY(${CONTROLDEV_TASKLIB_NAME} SHARED 
    ${CONTROLDEV_TASKLIB_SOURCES})

TARGET_LINK_LIBRARIES(${CONTROLDEV_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${CONTROLDEV_TASKLIB_DEPENDENT_LIBRARIES})

INSTALL(TARGETS ${CONTROLDEV_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CONTROLDEV_TASKLIB_HEADERS}
    DESTINATION include/orocos/controldev)

