include(controldevTaskLib)
ADD_LIBRARY(${CONTROLDEV_TASKLIB_NAME} SHARED 
    ${CONTROLDEV_TASKLIB_SOURCES})

add_dependencies(${CONTROLDEV_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${CONTROLDEV_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${CONTROLDEV_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${CONTROLDEV_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${CONTROLDEV_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${CONTROLDEV_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CONTROLDEV_TASKLIB_HEADERS}
    DESTINATION include/orocos/controldev)

